Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2873

TPipe and TPipeServer don't compile on Windows with UNICODE enabled

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9.3
    • 0.9.3
    • C++ - Library
    • Visual Studio 2013

    • Patch Available

    Description

      When compiling the Thrift C++ library with UNICODE enabled TPipe and TPipeServer won't compile as the are using LPSTR which only works with Multi byte charactersets.

      The appended patch uses LPTSTR instead of LPSTR which is set based on the UNICODE flag by Visual Studio.
      It also does some casts from raw const char * to LPCSTR.

      Attachments

        Activity

          People

            roger Roger Meier
            pascal.bach Pascal Bach
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: