THRIFT-2873 Make TPipe and TPipeServer working with unicode on windows

Signed-off-by: Pascal Bach <pascal.bach@siemens.com>